<resources>
    <string name="app_name">Ajay_journal_project</string>
    <string name="title_text">Self.Gratitude.Journal</string>
    <string name="grateful_text">What are you grateful for today</string>
    <string name="get_started">GET STARTED</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_hint">Enter E-mail</string>
    <string name="password_hint">Password</string>
    <string name="login_text">LOGIN</string>
    <string name="or_text">or</string>
    <string name="create_text">Creat Account</string>
    <string name="username_hint">Username</string>
    <string name="post_title">Title</string>
    <string name="thoughts">Your Thoughts</string>
    <string name="save_button">SAVE</string>
    <string name="name">Name</string>
    <string name="menu_title">Add Thought</string>
    <string name="sign_outhTitle">Sign Out</string>
    <string name="no_thought_hint">Write a journal Entry by clicking the \"+\" icon</string>
    <string name="title_hint">Title</string>
    <string name="update_title_hint">Enter new title</string>
    <string name="update_thought_hint">Enter new thought</string>
    <string name="update__button_hint">Update</string>
    <string name="home_activityhint">Home Activity</string>
    <string name="no_following_hint">Follow someone using follow Button</string>
    <string name="follow_button_hint">Follow Button</string>
    <string name="Acoount_hint">Account</string>
    <string name="follow_person">Follw</string>
    <string name="action_search">search</string>
    <string name="comment_hint">Comment</string>
    <string name="add_a_comment_hint">Add a comment</string>
</resources>