<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".LoginActivity">
<ProgressBar
    android:id="@+id/loginProgress"
    style="?android:attr/progressBarStyle"
    android:visibility="gone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <AutoCompleteTextView
        android:id="@+id/email_login"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
     <EditText
         android:id="@+id/password_login"
         android:hint="@string/password_hint"
         android:layout_marginTop="16dp"
         android:maxLines="1"
         android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/email_sign_in_button"
            android:textColor="@color/colorAccent"
            android:background="@android:color/transparent"
            android:text="@string/login_text"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/or_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/create_acct_button_login"
            android:textColor="@color/colorAccent"
            android:background="@android:color/transparent"
            android:text="@string/create_text"

            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/login_forget_password"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="forget Password"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:gravity="center">

        </Button>

    </LinearLayout>

</LinearLayout>