<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="18dp"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_bold"
        android:layout_marginBottom="30dp"
        android:text="@string/title_text"
        android:textSize="30sp"
        android:textStyle="bold">

    </TextView>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            android:layout_marginBottom="10dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/gratefulText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/grateful_text"
                android:textSize="19sp"
                android:textStyle="bold">

            </TextView>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <Button
        android:id="@+id/startButton"
        android:text="@string/get_started"
        android:textColor="@color/colorAccent"
        android:background="@android:color/transparent"
        android:elevation="6dp"
        android:fadingEdge="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>
</LinearLayout>